# camera-streaming-server2

./: .gitignore  1  CMakeLists.txt  caserver2
src/: IObserver.h  Observable.h  VideoStreamingController.cpp  VideoStreamingController.h  VideoStreamingRequestHandler.cpp  VideoStreamingRequestHandler.h  VideoStreamingRequestHandlerFactory.cpp  VideoStreamingRequestHandlerFactory.h  VideoStreamingServer.cpp  VideoStreamingServer.h  WebCamController.cpp  WebCamController.h  WebcamService.cpp  WebcamService.h  main.cpp  ov_video_capture.cpp  ov_video_capture.h
